--- a/.github/workflows/fetch-medium-articles-inject-into-readme.yml
+++ b/.github/workflows/fetch-medium-articles-inject-into-readme.yml
@@ -4,6 +4,9 @@ on:
     - cron: '0 * * * *'   # runs every hour
   workflow_dispatch:
 
+permissions:
+  contents: write
+  
 jobs:
   update-readme:
     runs-on: ubuntu-latest
