Refactor Twitter workflow to fetch latest tweets
Updated the workflow to fetch tweets and modified job names and steps.

--- a/.github/workflows/twitter-my-recent-tweets.yml
+++ b/.github/workflows/twitter-my-recent-tweets.yml
@@ -1,4 +1,4 @@
-name: Latest Tweets
+name: Fetch Latest Tweets
 
 on:
   schedule:
@@ -9,21 +9,28 @@ permissions:
   contents: write
 
 jobs:
-  update-tweets:
+  fetch-tweets:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Fetch tweets
-        uses: DenverCoder1/twitter-readme-action@v1
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          twitter_user: "alperebicoglu"
-          count: "3"
-          twitter_bearer_token: ${{ secrets.TWITTER_BEARER_TOKEN }}
+          node-version: '18'
 
-      - name: Commit changes
+      - name: Install deps
+        run: npm install
+
+      - name: Run tweet fetcher
+        run: node scripts/fetch-tweets.js
+        env:
+          TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
+
+      - name: Commit & push
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "Update latest tweets"
+          commit_message: "Update tweets"
+          commit_user_name: github-actions[bot]
+          commit_user_email: 41898282+github-actions[bot]@users.noreply.github.com
