--- a/.github/workflows/twitter-my-recent-tweets.yml
+++ b/.github/workflows/twitter-my-recent-tweets.yml
@@ -1,36 +1,37 @@
-name: Fetch Latest Tweets
+const fs = require("fs");
 
-on:
-  schedule:
-    - cron: "0 * * * *"   # every hour
-  workflow_dispatch:
+async function run() {
+  const { default: fetch } = await import("node-fetch");
+  const bearer = process.env.TWITTER_BEARER_TOKEN;
+  const username = "alperebicoglu";
 
-permissions:
-  contents: write
+  // 1) Get user ID
+  let res = await fetch(`https://api.twitter.com/2/users/by/username/${username}`, {
+    headers: { Authorization: `Bearer ${bearer}` }
+  });
+  let u = await res.json();
+  if (!u.data) {
+    console.error("No user data:", u);
+    return;
+  }
+  const userId = u.data.id;
 
-jobs:
-  fetch-tweets:
-    runs-on: ubuntu-latest
+  // 2) Fetch tweets
+  res = await fetch(`https://api.twitter.com/2/users/${userId}/tweets?max_results=3`, {
+    headers: { Authorization: `Bearer ${bearer}` }
+  });
+  const data = await res.json();
+  if (!data.data) {
+    console.log("No tweets found");
+    return;
+  }
 
-    steps:
-      - uses: actions/checkout@v3
+  let md = "## 🐦 Latest Tweets\n\n";
+  data.data.forEach(t => {
+    md += `- ${t.text.replace(/\n/g, " ")}\n`;
+  });
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+  fs.writeFileSync("TWEETS.md", md);
+}
 
-      - name: Install deps
-        run: npm install
-
-      - name: Run tweet fetcher
-        run: node scripts/fetch-tweets.js
-        env:
-          TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
-
-      - name: Commit & push
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: "Update tweets"
-          commit_user_name: github-actions[bot]
-          commit_user_email: 41898282+github-actions[bot]@users.noreply.github.com
+run();
