--- a/.github/workflows/fetch-medium-articles-inject-into-readme.yml
+++ b/.github/workflows/fetch-medium-articles-inject-into-readme.yml
@@ -1,7 +1,7 @@
 name: Latest Medium Articles
 on:
   schedule:
-    - cron: '0 * * * *'   # runs every hour
+    - cron: '0 0 * * *' # Once a day at 00:00
   workflow_dispatch:
 
 permissions:
