--- a/.github/workflows/twitter-my-recent-tweets.yml
+++ b/.github/workflows/twitter-my-recent-tweets.yml
@@ -2,7 +2,7 @@ name: Fetch Latest Tweets
 
 on:
   schedule:
-    - cron: "0 * * * *"   # every hour
+    - cron: '0 0 * * *'   # every day at 00:00
   workflow_dispatch:
 
 permissions:
